[gd_scene load_steps=47 format=3 uid="uid://f8urqb8ghxai"]

[ext_resource type="Script" uid="uid://t3tm32p2tcif" path="res://character_body_2d.gd" id="1_lstsv"]
[ext_resource type="Texture2D" uid="uid://c36l41ebn84xt" path="res://Free/Main Characters/Pink Man/Hit (32x32).png" id="2_w5boo"]
[ext_resource type="Texture2D" uid="uid://dk6ev22iq7l4b" path="res://Free/Main Characters/Ninja Frog/Hit (32x32).png" id="2_xbh8v"]
[ext_resource type="Texture2D" uid="uid://ddpg5njt5yl2b" path="res://Free/Main Characters/Ninja Frog/Idle (32x32).png" id="2_xjsgn"]
[ext_resource type="Texture2D" uid="uid://ealkqbflvvwx" path="res://Free/Main Characters/Ninja Frog/Run (32x32).png" id="3_xbh8v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w5boo"]
radius = 15.0
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7drhd"]
atlas = ExtResource("2_w5boo")
region = Rect2(0, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5xgv"]
atlas = ExtResource("2_w5boo")
region = Rect2(32, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf2qo"]
atlas = ExtResource("2_w5boo")
region = Rect2(64, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hhvc"]
atlas = ExtResource("2_w5boo")
region = Rect2(96, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_pif0h"]
atlas = ExtResource("2_w5boo")
region = Rect2(128, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_h24ns"]
atlas = ExtResource("2_w5boo")
region = Rect2(160, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_1168f"]
atlas = ExtResource("2_w5boo")
region = Rect2(192, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5boo"]
atlas = ExtResource("2_xbh8v")
region = Rect2(0, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_001vs"]
atlas = ExtResource("2_xbh8v")
region = Rect2(32, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxxjv"]
atlas = ExtResource("2_xbh8v")
region = Rect2(64, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_s27ga"]
atlas = ExtResource("2_xbh8v")
region = Rect2(96, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5v4j"]
atlas = ExtResource("2_xbh8v")
region = Rect2(128, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_cigbq"]
atlas = ExtResource("2_xbh8v")
region = Rect2(160, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd5qp"]
atlas = ExtResource("2_xbh8v")
region = Rect2(192, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgatp"]
atlas = ExtResource("2_xjsgn")
region = Rect2(0, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkx5e"]
atlas = ExtResource("2_xjsgn")
region = Rect2(32, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_exbbn"]
atlas = ExtResource("2_xjsgn")
region = Rect2(64, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb4fx"]
atlas = ExtResource("2_xjsgn")
region = Rect2(96, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdv18"]
atlas = ExtResource("2_xjsgn")
region = Rect2(128, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_tixg4"]
atlas = ExtResource("2_xjsgn")
region = Rect2(160, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi4wt"]
atlas = ExtResource("2_xjsgn")
region = Rect2(192, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3twc"]
atlas = ExtResource("2_xjsgn")
region = Rect2(224, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n02q"]
atlas = ExtResource("2_xjsgn")
region = Rect2(256, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6k4b"]
atlas = ExtResource("2_xjsgn")
region = Rect2(288, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7lk3"]
atlas = ExtResource("2_xjsgn")
region = Rect2(320, 4, 32, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqwnl"]
atlas = ExtResource("3_xbh8v")
region = Rect2(0, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_800iv"]
atlas = ExtResource("3_xbh8v")
region = Rect2(32, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sxb4"]
atlas = ExtResource("3_xbh8v")
region = Rect2(64, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ipr"]
atlas = ExtResource("3_xbh8v")
region = Rect2(96, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_deflj"]
atlas = ExtResource("3_xbh8v")
region = Rect2(128, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcsuc"]
atlas = ExtResource("3_xbh8v")
region = Rect2(160, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_sunn3"]
atlas = ExtResource("3_xbh8v")
region = Rect2(192, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_swm5h"]
atlas = ExtResource("3_xbh8v")
region = Rect2(224, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_akrmn"]
atlas = ExtResource("3_xbh8v")
region = Rect2(256, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5qme"]
atlas = ExtResource("3_xbh8v")
region = Rect2(288, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktjva"]
atlas = ExtResource("3_xbh8v")
region = Rect2(320, 3, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulaex"]
atlas = ExtResource("3_xbh8v")
region = Rect2(352, 3, 32, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_001vs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7drhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5xgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf2qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hhvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pif0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h24ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1168f")
}],
"loop": true,
"name": &"die",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5boo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_001vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxxjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s27ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5v4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cigbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd5qp")
}],
"loop": true,
"name": &"hit",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgatp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkx5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exbbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb4fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdv18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tixg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi4wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3twc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n02q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6k4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7lk3")
}],
"loop": true,
"name": &"idie",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqwnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_800iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sxb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ipr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deflj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcsuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sunn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swm5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akrmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5qme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktjva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulaex")
}],
"loop": true,
"name": &"run",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lstsv"]
size = Vector2(27, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjsgn"]
size = Vector2(27, 24)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_lstsv")

[node name="Timer2" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 7)
shape = SubResource("CapsuleShape2D_w5boo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 8)
scale = Vector2(1.46875, 1.31034)
sprite_frames = SubResource("SpriteFrames_001vs")
animation = &"die"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="deadzone" type="Area2D" parent="."]

[node name="deadzone" type="CollisionShape2D" parent="deadzone"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_lstsv")

[node name="damezone" type="Area2D" parent="."]

[node name="damezone" type="CollisionShape2D" parent="damezone"]
position = Vector2(0.5, 15)
shape = SubResource("RectangleShape2D_xjsgn")

[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_exited" from="deadzone" to="." method="_on_deadzone_body_exited"]
[connection signal="body_exited" from="damezone" to="." method="_on_damezone_body_exited"]
